--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -128,8 +128,8 @@ body {
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #f72727 !important;
-  border-color: #f72727 !important;
+  background-color: #f94343 !important;
+  border-color: #f94343 !important;
   color: #ffffff !important;
 }
 .btn-secondary:hover,
@@ -137,14 +137,14 @@ body {
 .btn-secondary.focus,
 .btn-secondary.active {
   color: #ffffff !important;
-  background-color: #ca0707 !important;
-  border-color: #ca0707 !important;
+  background-color: #e80707 !important;
+  border-color: #e80707 !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
   color: #ffffff !important;
-  background-color: #ca0707 !important;
-  border-color: #ca0707 !important;
+  background-color: #e80707 !important;
+  border-color: #e80707 !important;
 }
 .btn-info,
 .btn-info:active {
@@ -292,22 +292,22 @@ body {
 .btn-secondary-outline,
 .btn-secondary-outline:active {
   background: none;
-  border-color: #b10707;
-  color: #b10707;
+  border-color: #cf0707;
+  color: #cf0707;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
 .btn-secondary-outline.focus,
 .btn-secondary-outline.active {
   color: #ffffff;
-  background-color: #f72727;
-  border-color: #f72727;
+  background-color: #f94343;
+  border-color: #f94343;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
   color: #ffffff !important;
-  background-color: #f72727 !important;
-  border-color: #f72727 !important;
+  background-color: #f94343 !important;
+  border-color: #f94343 !important;
 }
 .btn-info-outline,
 .btn-info-outline:active {
@@ -427,7 +427,7 @@ body {
   color: #e37301 !important;
 }
 .text-secondary {
-  color: #f72727 !important;
+  color: #f94343 !important;
 }
 .text-success {
   color: #f7ed4a !important;
@@ -453,7 +453,7 @@ a.text-primary:focus {
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
-  color: #b10707 !important;
+  color: #cf0707 !important;
 }
 a.text-success:hover,
 a.text-success:focus {
@@ -682,7 +682,7 @@ blockquote {
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div:hover {
   color: #ffffff !important;
-  background: #f72727 !important;
+  background: #f94343 !important;
   box-shadow: none !important;
 }
 .lazy-bg {
@@ -891,6 +891,51 @@ section.lazy-placeholder:after {
 }
 .cid-s7BOh4cC2n H4 {
   color: #cc6714;
+}
+.cid-s7F1gVXyvd {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #073b4c;
+}
+.cid-s7F1gVXyvd h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-s7F1gVXyvd p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-s7F1gVXyvd .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-s7F1gVXyvd .mbr-section-btn a {
+  margin: 0;
+}
+.cid-s7F1gVXyvd .mbr-text {
+  color: #767676;
+}
+.cid-s7F1gVXyvd .card-wrapper {
+  height: 100%;
+}
+@media (max-width: 767px) {
+  .cid-s7F1gVXyvd .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-s7F1gVXyvd H2 {
+  color: #efefef;
+  text-align: center;
+}
+.cid-s7F1gVXyvd .mbr-section-subtitle {
+  color: #f94343;
+  text-align: center;
+}
+.cid-s7F1gVXyvd .mbr-text,
+.cid-s7F1gVXyvd .mbr-section-btn {
+  color: #efefef;
 }
 .cid-s7BUSURYKd {
   padding-top: 45px;
