--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -940,7 +940,7 @@ section.lazy-placeholder:after {
 .cid-s7BUSURYKd {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #ffffff;
+  background-color: #232323;
 }
 .cid-s7BUSURYKd h2 {
   text-align: center;
@@ -1013,8 +1013,72 @@ section.lazy-placeholder:after {
   }
 }
 .cid-s7BUSURYKd .mbr-section-text {
-  color: #232323;
+  color: #efefef;
 }
 .cid-s7BUSURYKd .mbr-crt-title {
   color: #e37301;
+}
+.cid-s7BUSURYKd .mbr-section-title {
+  color: #efefef;
+}
+.cid-s7FjnViAyV {
+  padding-top: 60px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-s7FjnViAyV .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-s7FjnViAyV .media-container-row {
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-s7FjnViAyV .mbr-text {
+  color: #767676;
+}
+.cid-s7FjnViAyV .mbr-author-desc {
+  display: block;
+  color: #767676;
+}
+.cid-s7FjnViAyV .mbr-author-name {
+  color: #767676;
+}
+.cid-s7FjnViAyV .mbr-testimonial .panel-item {
+  background-color: #efefef;
+}
+.cid-s7FjnViAyV .mbr-testimonial .card-block {
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
+  padding: 2.4rem 2.4rem 0 2.4rem;
+}
+.cid-s7FjnViAyV .mbr-testimonial .card-block .testimonial-photo {
+  display: inline-block;
+  width: 120px;
+  height: 120px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.cid-s7FjnViAyV .mbr-testimonial .card-block .testimonial-photo img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-s7FjnViAyV .mbr-testimonial .card-footer {
+  padding-bottom: 2.4rem;
+  border-top: 0;
+  padding-top: 1rem;
+  word-wrap: break-word;
+  word-break: break-word;
+  background: none;
+}
+@media (max-width: 300px) {
+  .cid-s7FjnViAyV .testimonial-photo {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+.cid-s7FjnViAyV H2 {
+  color: #232323;
 }
