--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -732,7 +732,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-s7BBcQVhfv {
-  padding-top: 30px;
+  padding-top: 45px;
   padding-bottom: 15px;
   background-color: #191818;
 }
@@ -776,7 +776,7 @@ section.lazy-placeholder:after {
   height: 72px;
   font-size: 36px;
   border-radius: 50%;
-  border: 2px solid #cc6714;
+  border: 2px solid #f94343;
   padding-bottom: 0;
 }
 @media (min-width: 768px) {
@@ -790,7 +790,7 @@ section.lazy-placeholder:after {
     content: "";
     height: 2px;
     width: calc(50% + 15px - 36px - 8px);
-    background-color: #cc6714;
+    background-color: #f94343;
   }
   .cid-s7AQMa2hSh .separline .step-wrapper:before {
     left: -15px;
@@ -831,7 +831,7 @@ section.lazy-placeholder:after {
   width: 64px;
   height: 64px;
   font-size: 32px;
-  border: 2px solid #cc6714;
+  border: 2px solid #e37301;
   border-radius: 50%;
   color: #efefef;
 }
@@ -844,11 +844,11 @@ section.lazy-placeholder:after {
 }
 @media (min-width: 992px) {
   .cid-s7BOh4cC2n .cards-block {
-    border-top: 2px solid #cc6714;
+    border-top: 2px solid #e37301;
   }
 }
 .cid-s7BOh4cC2n .cards-block .card {
-  border-bottom: 2px solid #cc6714;
+  border-bottom: 2px solid #e37301;
   border-radius: 0;
 }
 .cid-s7BOh4cC2n .cards-container {
@@ -890,7 +890,7 @@ section.lazy-placeholder:after {
   color: #efefef;
 }
 .cid-s7BOh4cC2n H4 {
-  color: #cc6714;
+  color: #f94343;
 }
 .cid-s7F1gVXyvd {
   padding-top: 30px;
