--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1137,30 +1137,28 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
-.cid-s7Xkpr9IQj {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #191818;
+.cid-s7Xt5BqmDP {
+  background: #191818;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-.cid-s7Xkpr9IQj .media-container-row {
-  flex-direction: row-reverse;
-  -webkit-flex-direction: row-reverse;
+.cid-s7Xt5BqmDP .image-block {
+  margin: auto;
 }
-@media (min-width: 992px) {
-  .cid-s7Xkpr9IQj .mbr-figure {
-    padding-right: 4rem;
-    padding-right: 0;
-    padding-left: 4rem;
-  }
+.cid-s7Xt5BqmDP .mbr-figure {
+  margin: 0 auto;
 }
-@media (max-width: 991px) {
-  .cid-s7Xkpr9IQj .mbr-figure {
-    padding-bottom: 3rem;
-  }
+.cid-s7Xt5BqmDP figcaption {
+  position: relative;
 }
-@media (max-width: 767px) {
-  .cid-s7Xkpr9IQj .mbr-text {
-    text-align: center;
+.cid-s7Xt5BqmDP figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s7Xt5BqmDP .image-block {
+    width: 100% !important;
   }
 }
 .cid-s7GwW4TFCT {
