--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1137,29 +1137,66 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
-.cid-s7Xt5BqmDP {
-  background: #191818;
-  padding-top: 60px;
-  padding-bottom: 60px;
+.cid-s8dyIYytbu {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #191818;
 }
-.cid-s7Xt5BqmDP .image-block {
-  margin: auto;
+.cid-s8dyIYytbu .carousel-item {
+  justify-content: center;
+  -webkit-justify-content: center;
 }
-.cid-s7Xt5BqmDP .mbr-figure {
-  margin: 0 auto;
+.cid-s8dyIYytbu .carousel-item.active,
+.cid-s8dyIYytbu .carousel-item-next,
+.cid-s8dyIYytbu .carousel-item-prev {
+  display: flex;
 }
-.cid-s7Xt5BqmDP figcaption {
-  position: relative;
+.cid-s8dyIYytbu .carousel-controls a {
+  transition: opacity .5s;
+  font-size: 2rem;
 }
-.cid-s7Xt5BqmDP figcaption div {
+.cid-s8dyIYytbu .carousel-controls a span {
   position: absolute;
-  bottom: 0;
-  width: 100%;
+  top: 180px;
+  padding: 10px;
+  border-radius: 50%;
+  color: #585858;
+  background: #c8c6c6;
+  opacity: .5;
 }
-@media (max-width: 768px) {
-  .cid-s7Xt5BqmDP .image-block {
-    width: 100% !important;
+.cid-s8dyIYytbu .carousel-controls a:hover span {
+  opacity: 1;
+}
+.cid-s8dyIYytbu .user_image {
+  width: 200px;
+  height: 200px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+  margin: 0 auto 2rem auto;
+}
+.cid-s8dyIYytbu .user_image img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+@media (max-width: 230px) {
+  .cid-s8dyIYytbu .user_image {
+    width: 100%;
+    height: auto;
   }
+}
+.cid-s8dyIYytbu H2 {
+  color: #ffffff;
+}
+.cid-s8dyIYytbu .user_text {
+  color: #ffffff;
+}
+.cid-s8dyIYytbu .user_name {
+  color: #ffffff;
+}
+.cid-s8dyIYytbu .user_desk {
+  color: #ffffff;
 }
 .cid-s7GwW4TFCT {
   background: #fd4040;
